--- a/styles/editor/MobileView.css
+++ b/styles/editor/MobileView.css
@@ -24,6 +24,11 @@
     z-index: 999;
   }
 
+  /* Add for step 2: Lift mobile nav above create-bottom-nav */
+  .mobile-interface.step-2 {
+    bottom: var(--editor-mobile-bar-h);
+  }
+
   /* 3. Bottom Navigation Bar */
   .mobile-bottom-bar {
     display: flex;
